--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -18,20 +18,20 @@ header.nl-header
         div.owl-carousel.main-carousel
             div.item.nl-slides.nl-slide-1
                 div.container-fluid
-                    h1 Draft your line up with <br />no limit coins
+                    h1 Draft your line up <br /> with NLC2
                     div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slides.nl-slide-2
-                div.container-fluid
-                    h2 Daily Fantasy Football
-                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+            //- div.item.nl-slides.nl-slide-2
+            //-     div.container-fluid
+            //-         h1 Challenge Joe h2h <br /> Play with Johnny
+            //-         div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
             div.item.nl-slides.nl-slide-3
                 div.container-fluid
-                    h2 Daily Fantasy Soccer
+                    h2 Daily Fantasy Soccer <br /> with NLC2
                     div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            //- div.item.nl-slides.nl-slide-4
-            //-     div.container-fluid
-            //-         h2 Daily Fantasy Football with <br />no limit coins
-            //-         //div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+            div.item.nl-slides.nl-slide-4
+                div.container-fluid
+                    h2 Fantasy Football with <br /> NLC2
+                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
 
 
 
