--- a/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
@@ -39,29 +39,29 @@ div.row
 		div.number
 			p.rank-player-top5.nr1 1
 		div.name-fix
-			p.name-top5 Matt Ryan1
+			p.name-top5 Rafael
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="1")                
 		div.number
 			p.rank-player-top5 2
 		div.name-fix
-			p.name-top5 Matt Ryan1
+			p.name-top5 Oscar
 	div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="2")                
 		div.number
 			p.rank-player-top5 3
 		div.name-fix
-			p.name-top5 Matt Ryan1
+			p.name-top5 Dan
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="3")                
 		div.number
 			p.rank-player-top5 4
 		div.name-fix
-			p.name-top5 Matt Ryan1
+			p.name-top5 Nicholas
 	div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="4")                
 		div.number
 			p.rank-player-top5 5
 		div.name-fix
-			p.name-top5 Matt Ryan1
+			p.name-top5 Anthony
 
 div.tab-content(id="top5-manager-content")
 	div(role='tabpanel' class='tab-pane active top-level-panel2' id='week3')
@@ -74,47 +74,62 @@ div.tab-content(id="top5-manager-content")
 								a.active(href="" data-target="#carouselTop5Managers" data-slide-to="0")
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-1
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
 											div.number
 												p 1
 											div.manager-thumbnail-name
 												p Rafael
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="1" )
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-2
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person11.png', style='display: block;')
 											div.number
 												p 2
 											div.manager-thumbnail-name
 												p Oscar
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="2" )
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-3
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person10.png', style='display: block;')
 											div.number
 												p 3
 											div.manager-thumbnail-name
 												p Dan
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="3" )
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-4
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person4.png', style='display: block;')
 											div.number
 												p 4
 											div.manager-thumbnail-name
 												p Nicholas
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="4" )
 									div.menu-item.top-5
 										div.players 
-											div.manager-thumbnail.manager-5
+											#top5-managers-nav(style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person5.png', style='display: block;')
 											div.number
 												p 5
 											div.manager-thumbnail-name
 												p Anthony
+											div.points-in-bar
+												p.points 121 PTS
 
 						div.carousel-inner
 							div.carousel-item.active
@@ -122,12 +137,15 @@ div.tab-content(id="top5-manager-content")
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
-												div.manager-image
+												#top5-managers-picture(style='display: block;')
+													img#top-manager(src='assets/img/about/person1.png', style='display: block;' class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 1
 														div.name
-															p Rafael Groswirt
+															p Rafael
+														div.points-in-bar
+															p.points 121 PTS
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -141,7 +159,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/img-players.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -227,18 +248,21 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 1
 														div.name
-															p Rafael Groswirt
+															p Rafael
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
-												div.manager-image
+												#top5-managers-picture(style='display: block;')
+													img#top-manager(src='assets/img/about/person11.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 2
 														div.name
-															p Kasper
+															p Oscar
+														div.points-in-bar
+															p.points 121 PTS
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -252,7 +276,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/img-players.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -338,18 +365,21 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 2
 														div.name
-															p Groswirt
+															p Oscar
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
-												div.manager-image
+												#top5-managers-picture(style='display: block;')
+													img#top-manager(src='assets/img/about/person10.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 3
 														div.name
 															p Dan
+														div.points-in-bar
+															p.points 121 PTS
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -363,7 +393,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/img-players.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -449,18 +482,138 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 3
 														div.name
-															p Kas
+															p Dan
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
-												div.manager-image
+												#top5-managers-picture(style='display: block;')
+													img#top-manager(src='assets/img/about/person4.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 4
+														div.name
+															p Nicholas
+														div.points-in-bar
+															p.points 121 PTS
+											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
+												div.nl-team-list-homepage.nl-my-teams
+													.nl-card-wrapper
+														.row
+															.col-12.no-padding
+																div.nl-team-card.table-data-field
+																	div.row 
+																		div.col-12.orange.no-padding
+																			h3 Score: 123
+																		div.col-12.no-padding
+																			h3 The best NLC2 team!
+																	div.row 
+																		div.col-10
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
+
+														.row
+															.col-12.no-padding
+																table.table.table-striped.nl-team-list-table
+																	thead
+																		tr
+
+																			th.name-list-view NAME
+																			th POS
+																			th FP
+																			th SALARY
+																			th
+
+																	tbody
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+																		tr
+
+																			td Player name
+																			td.pos A
+																			td 30
+																			td $0
+											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
+												div.manager-image-inner
+														div.number
+															p 4
+														div.name
+															p Nicholas
+							div.carousel-item
+								div.tab-content
+									div#manager1.tab-pane.active(role="tabpanel")
+										div.row.player
+											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
+												#top5-managers-picture(style='display: block;')
+													img#top-manager(src='assets/img/about/person5.png', style='display: block;'  class="img-fluid")
+													div.manager-image-inner
+														div.number
+															p 5
 														div.name
 															p Anthony
+														div.points-in-bar
+															p.points 121 PTS
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -474,118 +627,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/img-players.png" alt="helmet" class="helmet">
-
-														.row
-															.col-12.no-padding
-																table.table.table-striped.nl-team-list-table
-																	thead
-																		tr
-
-																			th.name-list-view NAME
-																			th POS
-																			th FP
-																			th SALARY
-																			th
-
-																	tbody
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-																		tr
-
-																			td Player name
-																			td.pos A
-																			td 30
-																			td $0
-											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
-												div.manager-image-inner
-														div.number
-															p 4
-														div.name
-															p Foo
-							div.carousel-item
-								div.tab-content
-									div#manager1.tab-pane.active(role="tabpanel")
-										div.row.player
-											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
-												div.manager-image
-													div.manager-image-inner
-														div.number
-															p 5
-														div.name
-															p Oscar
-											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
-												div.nl-team-list-homepage.nl-my-teams
-													.nl-card-wrapper
-														.row
-															.col-12.no-padding
-																div.nl-team-card.table-data-field
-																	div.row 
-																		div.col-12.orange.no-padding
-																			h3 Score: 123
-																		div.col-12.no-padding
-																			h3 The best NLC2 team!
-																	div.row 
-																		div.col-10
-																			<img src="assets/img/img-players.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -671,7 +716,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 5
 														div.name
-															p Oscar Foobar
+															p Anthony
 
 	div(role='tabpanel' class='tab-pane top-level-panel2' id='week4')
 		p week 4
