--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -81,16 +81,20 @@ div.tab-content(id="top5-manager-content")
 												p 1
 											div.manager-thumbnail-name
 												p Rafael
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="1")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/Oscar.jpg', style='display: block;')
+												img#top-manager-nav(src='assets/img/about/person11.png', style='display: block;')
 											div.number
 												p 2
 											div.manager-thumbnail-name
 												p Oscar
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="2")
 									div.menu-item.top-5
@@ -101,6 +105,8 @@ div.tab-content(id="top5-manager-content")
 												p 3
 											div.manager-thumbnail-name
 												p Dan
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="3")
 									div.menu-item.top-5
@@ -111,6 +117,8 @@ div.tab-content(id="top5-manager-content")
 												p 4
 											div.manager-thumbnail-name
 												p Nicholas
+											div.points-in-bar
+												p.points 121 PTS
 							li.nav-item
 								a(data-target="#carouselTop5Managers" href="" data-slide-to="4")
 									div.menu-item.top-5
@@ -121,6 +129,8 @@ div.tab-content(id="top5-manager-content")
 												p 5
 											div.manager-thumbnail-name
 												p Anthony
+											div.points-in-bar
+												p.points 121 PTS
 
 						div.carousel-inner
 							div.carousel-item.active
@@ -134,7 +144,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 1
 														div.name
-															p Rafael Groswirt
+															p Rafael
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -224,7 +234,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 1
 														div.name
-															p Rafael Groswirt
+															p Rafael
 							div.carousel-item
 								div.tab-content
 									div.tab-pane.active(id="manager1" role="tabpanel")
@@ -234,9 +244,9 @@ div.tab-content(id="top5-manager-content")
 													img#top-manager(src='assets/img/about/person11.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 1
+															p 2
 														div.name
-															p Rafael Groswirt
+															p Oscar
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -327,19 +337,19 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 2
 														div.name
-															p Kasper
+															p Oscar
 							div.carousel-item
 								div.tab-content
 									div.tab-pane.active(id="manager1" role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person3.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/about/person10.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 1
+															p 3
 														div.name
-															p Rafael Groswirt
+															p Dan
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -430,7 +440,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 3
 														div.name
-															p Rafael 
+															p Dan 
 							div.carousel-item
 								div.tab-content
 									div.tab-pane.active(id="manager1" role="tabpanel")
@@ -440,9 +450,9 @@ div.tab-content(id="top5-manager-content")
 													img#top-manager(src='assets/img/about/person4.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 1
+															p 4
 														div.name
-															p Rafael Groswirt
+															p Nicholas
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -533,7 +543,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 4
 														div.name
-															p Groswirt
+															p Nicolas
 							div.carousel-item
 								div.tab-content
 									div.tab-pane.active(id="manager1" role="tabpanel")
@@ -543,9 +553,9 @@ div.tab-content(id="top5-manager-content")
 													img#top-manager(src='assets/img/about/person5.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 1
+															p 5
 														div.name
-															p Rafael Groswirt
+															p Anthony
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -636,7 +646,7 @@ div.tab-content(id="top5-manager-content")
 														div.number
 															p 5
 														div.name
-															p Rafael 
+															p Anthony 
 
 	div(role='tabpanel' class='tab-pane top-level-panel2' id='week4')
 		p week 4
