--- a/markup/_layouts/_content/_homepage/top5-player-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-player-soccer.jade
@@ -39,29 +39,29 @@ div.row
 		div.number
 			p.rank-player-top5.nr1 1
 		div.name-fix
-			p.name-top5 Rob Grownkowski
+			p.name-top5 R. Grownkowski
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="1")                
 		div.number
 			p.rank-player-top5 2
 		div.name-fix
-			p.name-top5 Odell Beckham JR
+			p.name-top5 O. Beckham JR
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="2")                
 		div.number
 			p.rank-player-top5 3
 		div.name-fix
-			p.name-top5 Matt Ryan
+			p.name-top5 M. Ryan
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="3")                
 		div.number
 			p.rank-player-top5 4
 		div.name-fix
-			p.name-top5 Aaron Rodgers
+			p.name-top5 A. Rodgers
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="4")                
 		div.number
 			p.rank-player-top5 5
 		div.name-fix
-			p.name-top5 David Johnson
+			p.name-top5 D. Johnson
 
 div.tab-content(id="top5-player-content")
 	div(role='tabpanel' class='tab-pane active top-level-panel' id='RB')
